<resources>
    <string name="app_name">FunWithCensusData</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="transparency">Transparency</string>
    <string name="switch_image">Switch Image</string>
    <string name="state_information">The following section will contain information about the state
        that is highlighted. For now, only one state at a time can be highlighted, because that is
        the only way I can currently think of to show information about states. This will change.
        I also need to combine the done button and the learn more button so that the Learn More
        button does not always have to be visible.</string>
    <string name="state_name_goes_here">(Name of state goes here)</string>
    <string name="retrieving_info">Retrieving information…</string>
    <string name="body_of_water_message">This is a body of water, not one of the fifty United States.
    </string>
    <string name="other_land_message">This land is not in one of the fifty United States.</string>
    <string name="click_a_state_to_begin">Click a state to begin</string>
    <string name="number_of_18_and_19_year_old_black_men">Number of 18- and 19-year-old black men</string>
    <string name="welcome_text_pt1">Welcome! This app allows you to compare data about each of the fifty United States and the District of Columbia. (Territories are not supported.)</string>
    <string name="welcome_text_pt2">Just select the topic you wish to learn about from this screen, and you will be able to compare them on the map!</string>
    <string name="loading_text">Loading…</string>
    <string name="continue_to_the_map">Continue to the map!</string>
    <string name="select_topic">Select a topic</string>

</resources>
