<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F11F77"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:textSize="36sp"
      android:layout_gravity="center"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/welcome_text_pt1"
      android:padding="24dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/welcome_text_pt2"
      android:paddingBottom="24dp"
      android:paddingLeft="24dp"
      android:paddingRight="24dp"
      />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="24dp"
      android:paddingRight="24dp"
      >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eighteen_radiobutton"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_18_and_19_year_old_black_men"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/eighteen_radiobutton"
        android:layout_toEndOf="@+id/eighteen_radiobutton"
        />
  </RelativeLayout>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/loading_text"
      android:text="@string/loading_text"
      android:textSize="24sp"
      android:textAllCaps="true"
      android:layout_gravity="center"
      android:visibility="visible"
      />
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/continue_button"
      android:text="@string/continue_to_the_map"
      android:enabled="false"
      android:layout_gravity="center"
      android:visibility="gone"
      />



</LinearLayout>